@@ -1,7 +1,7 @@
 #maven.buildNumber.plugin properties file
-#Wed Feb 06 16:04:23 CET 2013
+#Thu Feb 07 21:21:20 CET 2013
 buildNumber=4
 >>>>>>>=other
-buildNumber0=1706
-<<<<<<<=local
+buildNumber0=1731
 =\=\=\=\=\=\=
+<<<<<<<=local
