@@ -26,3 +26,4 @@ Added MatchListener.startProcessing() callback
 Added performance profiling to command-line client
 Removed sub-cleaner concept, added support for multiple cleaners
 Using NIOFSDirectory on all platforms except Windows (for performance)
+New in-memory backend, much faster than Lucene
